--- a/src/pages/Home/Home.styles.css
+++ b/src/pages/Home/Home.styles.css
@@ -1,8 +1,11 @@
-.homepage {
-  text-align: center;
+.HomeTitle{
+  font-size: 3.75rem;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 300;
+  line-height: 1.2;
+  letter-spacing: -0.00833em;
 }
-
-.homepage h1 {
-  font-size: 3rem;
-  letter-spacing: -2px;
+.divList{
+  margin: 150px;
+  text-align: center;
 }
