Revert "Mini-Challenge1"

--- a/src/pages/Home/Home.styles.css
+++ b/src/pages/Home/Home.styles.css
@@ -1,11 +1,8 @@
-.HomeTitle{
-  font-size: 3.75rem;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-weight: 300;
-  line-height: 1.2;
-  letter-spacing: -0.00833em;
-}
-.divList{
-  margin: 150px;
+.homepage {
   text-align: center;
+}
+
+.homepage h1 {
+  font-size: 3rem;
+  letter-spacing: -2px;
 }
